HW7: root, resource & meal controllers with tests